test/TestPhases/causality/invalid/Singleton10.blc
@[CFunction(binding="",header="")]
extern singleton function g()
    

function f()
    g()
end

function h() returns uint8
    g()
    return 7
end

function bar(x: uint8)(y: uint8)
    y = x
end

@[EntryPoint]
activity A()
    var foo: [30]uint8
    cobegin
        await true
        bar(7)(foo[h()])
    with
        await true
        f()
    end
end